--- a/demo/demo.scss
+++ b/demo/demo.scss
@@ -1,44 +1,40 @@
-.demo-container {
+$primary-color: #03a9f4;
 
-  margin: 0 auto;
-  padding: 60px;
+.demo-container {
+  border: 1px solid #ccc;
+  margin: 40px auto;
+  padding: 0;
   width: 768px;
 
+  > h1 {
+    color: $primary-color;
+    text-align: center;
+  }
 }
 
 .react-sanfona {
-
   border-radius: 3px;
-
 }
 
 .react-sanfona-item {
 
   &-title {
-
     background-color: #fafafa;
-    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
     color: #333;
-    padding: 10px 20px;
-
-  }
-
-  &:last-child &-title {
-
-    border-bottom: none;
-
+    padding: 20px;
+    text-transform: uppercase;
+    transition: background-color .3s;
   }
 
   &-expanded &-title {
-    background-color: #03a94f;
+    background-color: $primary-color;
     color: #fff;
   }
 
   &-body-wrapper {
-
-    box-shadow: inset 0 0 12px rgba(#ccc, .2);
-    padding: 15px;
-
+    color: #666;
+    padding: 20px;
   }
 
 }
