Add single example to demo

--- a/demo/demo.scss
+++ b/demo/demo.scss
@@ -13,7 +13,9 @@ $primary-color: #03a9f4;
 }
 
 .react-sanfona {
+  border-bottom: 1px solid #ccc;
   border-radius: 3px;
+  margin-bottom: 70px;
 }
 
 .react-sanfona-item {
