--- a/demo/demo.css
+++ b/demo/demo.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  font-family: 'Nobile', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .demo-container {
